--- a/show.html
+++ b/show.html
@@ -108,7 +108,7 @@
 <script language="javascript">
     function show_date_time() {
         window.setTimeout("show_date_time()", 1000);
-        BirthDay = new Date("1/20/2018 00:00:00"); //这个日期是可以修改的
+        BirthDay = new Date("10/29/2021 00:00:00"); //这个日期是可以修改的
         today = new Date();
         timeold = (today.getTime() - BirthDay.getTime());
         sectimeold = timeold / 1000
@@ -132,7 +132,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("{{被表白人}}|I'm|{{表白者}}|Nice|to|Meet|You|#countdown 3|#time");
+            S.UI.simulate("{{安珍珍}}|I'm|{{许顺}}|Nice|to|Meet|You|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
